--- a/template/style.css
+++ b/template/style.css
@@ -4,7 +4,21 @@ html {
 }
 body {
     margin: 0;
-    height: 100vh;
+    height: 100vh; /* view port height */
     font-size: 1.6rem;
     font-family: Helvetica, Arial, sans-serif;
 }
+
+/*Layout*/
+.grid-container{
+    display: grid; /*grid is a new layout for css which is very responsive and flexible*/
+    grid-template-areas: 
+    'header'
+    'main'
+    'footer';
+    grid-template-columns: 1fr; /* 1 fragment */
+    grid-template-rows: 5rem 1fr 5rem;
+    height: 100%;
+}
+
+//22:43
