added website template styles

--- a/template/index.html
+++ b/template/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <div class="grid-container">
-            <header>
+            <header class="row">
                 <div>
-                    <a href="index.html">amazona</a>
+                    <a class="brand" href="index.html">amazona</a>
                 </div>
                 <div>
                     <a href="cart.html">Cart</a>
@@ -25,7 +25,7 @@
                     <li>Product 4</li>
                 </ul>
             </main>
-            <footer>All Right reserved.</footer>
+            <footer class="row center">All Right reserved.</footer>
         </div>        
     </body>
 </html>
