--- a/template/style.css
+++ b/template/style.css
@@ -21,4 +21,47 @@ body {
     height: 100%;
 }
 
-//22:43
+header{
+    grid-area: header; /*conecting the place holder on line 16*/
+    background-color: #203040;
+}
+main{
+    grid-area: main;
+    padding: 1rem;
+}
+footer{
+    grid-area: footer;
+    background-color: #203040;
+    color:#ffffff;
+}
+
+/*Common classes*/
+a{
+    text-decoration: none; /*remove underlines from links*/
+}
+a:hover{
+    color:#ff8000;
+}
+
+/*Header*/
+header a{
+    color:#ffffff;
+    padding: none;
+}
+a.brand{
+    color: #ffffff;
+    font-size: 3rem;
+    font-weight: bold;
+}
+/*display item side by side*/
+.row{
+display: flex; /*display item side by side*/
+flex-wrap: wrap; /*to be responsive so that if we shrink it automatically brings the items to next row*/
+justify-content: space-between; /*maximum space between items*/
+align-items: center; /*make it vertically centered*/
+}
+.row.center{
+    justify-content: center; /**center aligned vertically and horizontally**/
+}
+
+//27:15
