--- a/template/style.css
+++ b/template/style.css
@@ -35,7 +35,16 @@ footer{
     color:#ffffff;
 }
 
-/*Common classes*/
+
+/*Common*/
+h1{
+    font-size: 1.8rem;
+    padding: 1rem 0;
+}
+h2{
+    font-size: 1.6rem;
+    padding: 1rem 0;
+}
 a{
     text-decoration: none; /*remove underlines from links*/
 }
@@ -64,4 +73,36 @@ align-items: center; /*make it vertically centered*/
     justify-content: center; /**center aligned vertically and horizontally**/
 }
 
-//27:15
+/*Images*/
+img{
+    border-radius: 0.5rem;
+}
+img.medium{
+    max-width: 29rem;
+    width:100%
+}
+
+/* Card */
+.card{
+    border: 0.1rem #c0c0c0 solid;
+    background-color: #f8f8f8;
+    border-radius: 0.5rem;
+    margin: 1rem;
+}
+.card-body{
+    padding: 1rem;
+}
+.card-body > *{
+    margin-bottom: 0.5rem;
+}
+.price {
+    font-size: 2rem;
+}
+
+/*Rating*/
+.rating span{
+    color:#f0c040;
+    margin:0.1rem;
+}
+
+//55
